Set API key for generative language models
Added API key for accessing the generative language models.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         // Global Variables
         // WARNING: If hosting publicly (like GitHub Pages), replace the empty string below with your actual API key.
         // Putting the key in public frontend code is insecure.
-        const apiKey = "";
+        const apiKey = "AIzaSyCuZcwFcjmnmEfI2_dXWk_PzyXbT2XTCH8";
         const GEMINI_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent";
         const IMAGEN_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/imagen-3.0-generate-002:predict";
 
