Set API key for Google service

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 
     <script type="module">
         // Global Variables
-        const apiKey = ""; 
+        const apiKey = "AIzaSyBaUh7CiEA_Ugwz6_Xa4D4dV8sYyIb2TMs"; 
         const GEMINI_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-09-2025:generateContent";
         const TTS_API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-tts:generateContent"; 
 
